Refactor service change, owner change, new change flows and cache/login infrastructure
- Remove legacy service change controllers/services (SvcChgRestSvcImpl, MsfChangPageSvcImpl) and replace with MsfRegSvcServiceImpl
- Refactor cache layer: InMemoryCacheService, RedisCacheService, CacheService port; remove startup load classes and tracing utils
- Refactor login core: new DTOs (LoginTokenPair, LoginResultUserInfo, LoginSessionReady, etc.), token store and session service updates
- Remove commoncode domain; add eformsign and koi-ocr domain scaffolding
- Update owner change, new change service and Vue store logic
- Update Vue components: MsfServiceChangeAdditon, MsfDevicePlanInfo, MsfSubscriberInfo, MsfWirelessDataBlock, and related views/stores

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>