@@ -1,13 +1,13 @@
 package com.ktmmobile.msf.domains.form.form.common.service;
 
-import com.ktmmobile.msf.domains.form.common.code.CategoryType;
-import com.ktmmobile.msf.domains.form.common.dto.IntmInsrRelDTO;
-import com.ktmmobile.msf.domains.form.common.dto.McpRegServiceDto;
-import com.ktmmobile.msf.domains.form.common.repository.McpApiClient;
-import com.ktmmobile.msf.domains.form.form.common.dto.*;
-import com.ktmmobile.msf.domains.form.form.common.repository.msp.ProductInfoReadMapper;
-import com.ktmmobile.msf.domains.form.form.common.repository.smartform.ProductSmartInfoReadMapper;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 import jakarta.validation.Valid;
+
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -15,12 +15,34 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import com.ktmmobile.msf.commons.websecurity.security.auth.util.AuthenticationUtils;
+import com.ktmmobile.msf.domains.form.common.code.CategoryType;
+import com.ktmmobile.msf.domains.form.common.dto.IntmInsrRelDTO;
+import com.ktmmobile.msf.domains.form.common.dto.McpRegServiceDto;
+import com.ktmmobile.msf.domains.form.common.dto.response.FormResponse;
+import com.ktmmobile.msf.domains.form.common.repository.McpApiClient;
+import com.ktmmobile.msf.domains.form.form.common.dto.CategoryInfoDto;
+import com.ktmmobile.msf.domains.form.form.common.dto.CategoryMstRequest;
+import com.ktmmobile.msf.domains.form.form.common.dto.CategoryRelRequest;
+import com.ktmmobile.msf.domains.form.form.common.dto.InsrProdRequest;
+import com.ktmmobile.msf.domains.form.form.common.dto.MsfRequestAdditionRequest;
+import com.ktmmobile.msf.domains.form.form.common.dto.MsfRequestAdditionResponse;
+import com.ktmmobile.msf.domains.form.form.common.dto.MspAdditionDto;
+import com.ktmmobile.msf.domains.form.form.common.dto.MspJuoSubInfoRequest;
+import com.ktmmobile.msf.domains.form.form.common.dto.MspJuoSubInfoResponse;
+import com.ktmmobile.msf.domains.form.form.common.dto.MspSaleAgrmMstInfoDto;
+import com.ktmmobile.msf.domains.form.form.common.dto.MspSalePlcyMstInfoDto;
+import com.ktmmobile.msf.domains.form.form.common.dto.MspSaleSubsdMstRequest;
+import com.ktmmobile.msf.domains.form.form.common.dto.MspSaleSubsdMstResponse;
+import com.ktmmobile.msf.domains.form.form.common.dto.PhoneInfoDto;
+import com.ktmmobile.msf.domains.form.form.common.dto.PhoneInfoResponse;
+import com.ktmmobile.msf.domains.form.form.common.dto.PhoneSerialRequest;
+import com.ktmmobile.msf.domains.form.form.common.dto.PriceJoinUsimRequest;
+import com.ktmmobile.msf.domains.form.form.common.dto.PriceJoinUsimResponse;
+import com.ktmmobile.msf.domains.form.form.common.dto.ProductInfoRequest;
+import com.ktmmobile.msf.domains.form.form.common.dto.RateInfoDto;
+import com.ktmmobile.msf.domains.form.form.common.repository.msp.ProductInfoReadMapper;
+import com.ktmmobile.msf.domains.form.form.common.repository.smartform.ProductSmartInfoReadMapper;
 
 @Service
 @RequiredArgsConstructor
@@ -32,22 +54,17 @@ public class ProductInfoService {
     private final ProductSmartInfoReadMapper productSmartInfoReadMapper;
     private final AuthInfoService authInfoService;
 
-    //판매정책조회
-    /*public List<MspSalePlcyMstInfoDto> getMspSalePlcyMstList(CommonSearchCondition condition) {
-        List<MspSalePlcyMstInfoDto> data = productInfoMapper.selectMspSalePlcyMstList(condition);
-        return data;
-    }*/
     //판매정책조회 (PRDT_ID 값 k코드가 있으면 판매정책 하나가 조회됨)
-    public List<MspSalePlcyMstInfoDto> getMspSalePlcyMstList(ProductInfoRequest condition) {
-        List<MspSalePlcyMstInfoDto> mspSalePlcyInfo = productInfoReadMapper.selectMspSalePlcyMstList(condition);
+    public List<MspSalePlcyMstInfoDto> getMspSalePlcyMstList(ProductInfoRequest request) {
+        List<MspSalePlcyMstInfoDto> mspSalePlcyInfo = productInfoReadMapper.selectMspSalePlcyMstList(request);
         List<MspSalePlcyMstInfoDto> distinctList = new ArrayList<>(
-                mspSalePlcyInfo.stream()
-                        .collect(Collectors.toMap(
-                                MspSalePlcyMstInfoDto::getSalePlcyCd,
-                                Function.identity(),
-                                (existing, replacement) -> existing
-                        ))
-                        .values()
+            mspSalePlcyInfo.stream()
+                .collect(Collectors.toMap(
+                    MspSalePlcyMstInfoDto::getSalePlcyCd,
+                    Function.identity(),
+                    (existing, replacement) -> existing
+                ))
+                .values()
         );
         return distinctList;
         /*if (mspSalePlcyInfo.size() == 0 || distinctList.size() == 0) {
@@ -60,17 +77,17 @@ public class ProductInfoService {
     public List<MspSalePlcyMstInfoDto> getSaleTypeList(ProductInfoRequest condition) {
         List<MspSalePlcyMstInfoDto> salePlcyInfo = productInfoReadMapper.selectSaleTypeList(condition);
         return salePlcyInfo;
-//        List<MspSalePlcyMstInfoDto> mspSalePlcyInfo = productInfoMapper.selectMspSalePlcyMstList(condition);
-//        List<MspSalePlcyMstInfoDto> distinctList = new ArrayList<>(
-//                mspSalePlcyInfo.stream()
-//                        .collect(Collectors.toMap(
-//                                MspSalePlcyMstInfoDto::getSprtTp,
-//                                Function.identity(),
-//                                (existing, replacement) -> existing
-//                        ))
-//                        .values()
-//        );
-//        return distinctList;
+        //        List<MspSalePlcyMstInfoDto> mspSalePlcyInfo = productInfoMapper.selectMspSalePlcyMstList(condition);
+        //        List<MspSalePlcyMstInfoDto> distinctList = new ArrayList<>(
+        //                mspSalePlcyInfo.stream()
+        //                        .collect(Collectors.toMap(
+        //                                MspSalePlcyMstInfoDto::getSprtTp,
+        //                                Function.identity(),
+        //                                (existing, replacement) -> existing
+        //                        ))
+        //                        .values()
+        //        );
+        //        return distinctList;
 
     }
 
@@ -99,7 +116,40 @@ public class ProductInfoService {
     }
 
     //휴대폰 목록조회
-    public List<PhoneInfoDto> getPhoneList(ProductInfoRequest request) {
+    public List<PhoneInfoResponse> getPhoneList(ProductInfoRequest request) {
+        //1. 조직코드로 단말재고 확인
+        PhoneSerialRequest phoneSerialRequest = new PhoneSerialRequest();
+        //phoneSerialRequest.setOrgnId(request.getOrgnId()); //@@변경필수@@ - 세션정보로 매장코드 변경
+        phoneSerialRequest.setOrgnId("1100014062"); //@@변경필수@@ - 세션정보로 매장코드 변경
+        List<CategoryInfoDto> categoryInfoDto = this.getPhoneInventoryList(phoneSerialRequest);
+        request.setListPhoneDto(categoryInfoDto);
+
+        //2. 판매정책 조회
+        request.setPlcyTypeCd("N"); //[필수][스마트 고정] >> N:위탁온라인, W:도매, M:오프라인, D:직영
+        List<MspSalePlcyMstInfoDto> listMspSaleDto = this.getMspSalePlcyMstList(request);
+        request.setListMspSaleDto(listMspSaleDto);
+
+        //3. M전산에서 조회된 판매정책으로 단말목록조회
+        List<PhoneInfoResponse> mspPhoneList = null;
+        if (!ObjectUtils.isEmpty(listMspSaleDto)) {
+            mspPhoneList = productInfoReadMapper.selectPhoneList(request);
+        }
+
+        //4. M전산 조회 단말목록에서 매장재고 있는 단말목록만 추출
+        List<PhoneInfoResponse> data = null;
+        if (!ObjectUtils.isEmpty(mspPhoneList)) {
+            data = mspPhoneList.stream()
+                .filter(phone -> categoryInfoDto.stream()
+                    .filter(y -> y.getProdId() != null)
+                    .map(x -> x.getProdId())
+                    .toList().contains(phone.getModelId()))
+                //.toList().contains(phone.getRprsPrdtId()))
+                .collect(Collectors.toList());
+        }
+
+        return data;
+    }
+    /*public List<PhoneInfoDto> getPhoneList(ProductInfoRequest request) {
         //1. 조직코드로 단말재고 확인
         PhoneSerialRequest phoneSerialRequest = new PhoneSerialRequest();
         //phoneSerialRequest.setOrgnId(request.getOrgnId()); //@@변경필수@@ - 세션정보로 매장코드 변경
@@ -122,15 +172,14 @@ public class ProductInfoService {
         List<PhoneInfoDto> data = null;
         if (!ObjectUtils.isEmpty(mspPhoneList)) {
             data = mspPhoneList.stream()
-                    .filter(phone -> categoryInfoDto.stream()
-                            .map(x -> x.getProdId())
-                            .toList().contains(phone.getRprsPrdtId()))
-                    .collect(Collectors.toList());
+                .filter(phone -> categoryInfoDto.stream()
+                    .map(x -> x.getProdId())
+                    .toList().contains(phone.getRprsPrdtId()))
+                .collect(Collectors.toList());
         }
 
         return data;
-        //return FormResponse.of(ResponseMessage.SUCCESS, data);
-    }
+    }*/
 
     //요금제 목록조회
     public List<RateInfoDto> getRateList(ProductInfoRequest request) {
@@ -147,20 +196,28 @@ public class ProductInfoService {
         request.setListRateDto(listRateDto);
 
         //2. 선택된 카테고리에 맞는 요금제를 조건절로 추가하여 M전산에서 요금제 목록 조회
+
+        request.setPayClCd("PO"); //후불-고정 >> 상수처리@@ 필요!!!
+
         List<RateInfoDto> data = productInfoReadMapper.selectRateList(request);
 
         return data;
     }
 
-    //공시지원금 조회
+    //가격정보조회 (단말,요금,지원금) - 출고가, 기본요금, 공시지원금 등
     public MspSaleSubsdMstResponse getMspSaleSubsdMst(MspSaleSubsdMstRequest request) {
-        //request.setOrgnId("1100011741"); //조직코드 >> 세션으로 변경필수!!!!!!!!!!!!!!!!!!!!
+        request.setOrgnId(AuthenticationUtils.getAgentCode()); //대리점코드
+        request.setOldYn("N"); //스마트는 새폰만 됨.
         return productInfoReadMapper.selectMspSaleSubsdMst(request);
     }
-    /*public List<PhoneInfoDto> getMspOfficialNoticeSupport(ProductInfoRequest condition) {
-        List<PhoneInfoDto> data = productInfoReadMapper.selectMspOfficialNoticeSupport(condition);
-        return data;
-    }*/
+
+    //가격정보조회 (가입비, 유심비)
+    public PriceJoinUsimResponse getJoinUsimPrice(PriceJoinUsimRequest request) {
+        String priceGubun = request.getOperTypeCd() + request.getPrdtSctnCd();
+        request.setPriceGubun(priceGubun);
+        return productInfoReadMapper.selectJoinUsimPrice(request);
+    }
+
 
     //휴대폰 매장 재고 조회 (postgre)
     public List<CategoryInfoDto> getPhoneInventoryList(@Valid PhoneSerialRequest condition) {
@@ -235,19 +292,30 @@ public class ProductInfoService {
 
     //부가서비스 목록 조회 (기기변경의 가입중 부가서비스 목록조회)
     public List<MsfRequestAdditionResponse> getActiveAdditionList(MspJuoSubInfoRequest request) {
+        List<MsfRequestAdditionResponse> msfRequestAdditionResponseList = new ArrayList<>();
+
         //고객구분, 고객식별번호, 핸드폰번호로 고객조회해서 고식별번호와 핸드폰번호로
         //고객명과 핸드폰번호로 기기변경 조회서비스 호출하여 고객아이디 조회
-        MspJuoSubInfoResponse customerInfoResponse = authInfoService.getJuoSubInfo(request);
-        String ncn = customerInfoResponse.getContractNum();
+        String ncn = "";
+        FormResponse<MspJuoSubInfoResponse> customerInfoResponse = authInfoService.getJuoSubInfo(request);
+        if (customerInfoResponse == null) {
+            return msfRequestAdditionResponseList;
+        }
+        if (customerInfoResponse.resCode().equals("0000")) {
+            ncn = customerInfoResponse.resData().getContractNum();
+        }
+
+        if (!StringUtils.hasText(ncn)) {
+            return msfRequestAdditionResponseList;
+        }
 
         //기기변경인 경우 가입중 부가서비스 목록 조회 ( mcp-api : /mypage/regService ) //계약번호 필요
         List<McpRegServiceDto> regServiceList = mcpApiClient.post(
-                "/mypage/regService",
-                ncn,
-                List.class
+            "/mypage/regService",
+            ncn,
+            List.class
         );
 
-        List<MsfRequestAdditionResponse> msfRequestAdditionResponseList = new ArrayList<>();
         MsfRequestAdditionRequest condition = new MsfRequestAdditionRequest(); //
         List<MspAdditionDto> mspAdditionDtoList = new ArrayList<>();
 
@@ -256,12 +324,12 @@ public class ProductInfoService {
         msfRequestAdditionResponse.setPaidAddition(new ArrayList<>()); //유료부가서비스 return
 
         List<CategoryInfoDto> categoryInfoDtoList = regServiceList.stream()
-                .map(mcpDto -> {
-                    CategoryInfoDto categoryDto = new CategoryInfoDto();
-                    categoryDto.setProdId(mcpDto.getRateCd());
-                    return categoryDto;
-                })
-                .collect(Collectors.toList());
+            .map(mcpDto -> {
+                CategoryInfoDto categoryDto = new CategoryInfoDto();
+                categoryDto.setProdId(mcpDto.getRateCd());
+                return categoryDto;
+            })
+            .collect(Collectors.toList());
 
         if (!categoryInfoDtoList.isEmpty()) {
             //M전산에서 조회하기
@@ -285,9 +353,9 @@ public class ProductInfoService {
     public List<IntmInsrRelDTO> getInsrProdList(InsrProdRequest request) {
         //1. M전산에서 안심보험 목록 조회
         List<IntmInsrRelDTO> insrProdList = mcpApiClient.post(
-                "/appform/selectInsrProdList",
-                request.getIntmInsrRelDTO(),
-                List.class
+            "/appform/selectInsrProdList",
+            request.getIntmInsrRelDTO(),
+            List.class
         );
 
         //2. 스마트에서 요금제/부가서비스/안심보험 목록 관리 테이블에서 조회
@@ -300,14 +368,14 @@ public class ProductInfoService {
         if (!ObjectUtils.isEmpty(categoryInfoDtoList)) {
             //3. 스마트에 등록된 안심보험 목록 기준으로 추출
             Set<String> validIds = categoryInfoDtoList.stream()
-                    .map(CategoryInfoDto::getProdId)
-                    .filter(Objects::nonNull)
-                    .collect(Collectors.toSet());
+                .map(CategoryInfoDto::getProdId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
 
             //4. M전산에서 조회한 안심보험 목록이 스마트에 등록된 안심보험 목록에 포함된 것만 INSR_PROD_CD 기준으로 필터링 처리
             filteredList = insrProdList.stream()
-                    .filter(insr -> validIds.contains(insr.getInsrProdCd()))
-                    .collect(Collectors.toList());
+                .filter(insr -> validIds.contains(insr.getInsrProdCd()))
+                .collect(Collectors.toList());
         }
 
         return filteredList;
